--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.numad20s_huiyunwu"
+        applicationId "whyellow.tk.numad20s_huiyunwu"
         minSdkVersion 26
         targetSdkVersion 28
         versionCode 1
