--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             android:label="@string/title_activity_link__collector"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".FindPrimes"
+            android:name=".MathMagic"
             android:label="@string/find_primes"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
